# veritool

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK_PLAN.md  BENCHMARK_RESULTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  config.py  demo.py  demo_deletion.py  demo_tahoe.py  orchestrator.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Lean/: Invalid.lean  Policy.lean  Trace.lean  Verify.lean
benchmark/: ablation_benchmark.py  benchmark_data.json  compare.py  export_opa_inputs.py  opa_cedar_analysis.md  opa_history.rego  opa_policies.rego  report.py  run_opa_comparison.sh  runner.py  runner_opa_history.py  scalability.py  scalability_extended.py  taubench_benchmark.py  throughput.py  traces.py
benchmark/graphs/: generate_graphs.py
benchmark/opa_inputs/composite_deploy/concurrent_deploy/: action_1.json  action_2.json  action_3.json
benchmark/opa_inputs/concurrent_writes/cross_agent_conflict/: action_0.json  action_1.json
benchmark/opa_inputs/concurrent_writes/cross_agent_different_resource/: action_0.json  action_1.json
benchmark/opa_inputs/deploy_pipeline/missing_approve/: action_2.json
benchmark/opa_inputs/deploy_pipeline/missing_build/: action_1.json
benchmark/opa_inputs/empty_trace/single_unrelated/: action_0.json
benchmark/opa_inputs/monotonic_budget/decreasing/: action_0.json  action_1.json
benchmark/opa_inputs/monotonic_budget/increasing/: action_0.json
benchmark/opa_inputs/monotonic_budget/same_value/: action_0.json
benchmark/opa_inputs/monotonic_budget/separate_agents/: action_0.json  action_1.json
benchmark/opa_inputs/noop_actions/interleaved_noops/: action_0.json  action_1.json  action_2.json
benchmark/opa_inputs/self_approval/different_agent_approves/: action_0.json  action_1.json
bridge/: __init__.py  cvc5_encoder.py  invariant.py  policy_spec.py  trace.py  z3_encoder.py
cli/: __init__.py  auto_generator.py  round_trip.py
dashboard/: app.py
integrations/: __init__.py  autogen.py  crewai.py  langchain.py
llm/: groq_client.py  prompts.py
paper/: paper.tex
policy_store/: __init__.py  audit.py  store.py
tests/: test_audit.py  test_auto_generator.py  test_bridge.py  test_coordination.py  test_deletion.py  test_e2e.py  test_groq_client.py  test_integration.py  test_integrations.py  test_orchestrator.py  test_policy_store.py  test_schema.py  test_tahoe.py  test_verifier.py
verifier/: coordination_policy.py  deletion_policy.py  schema.py  tahoe_policy.py  verifier.py
(+1 files in other folders)
